--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 
   <table>
+    <tr>
+      <th>City</th>
+      <th>State</th>
+      <th>2017 estimate</th>
+    </tr>
   </table> 
 
 </body>
